--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -8,8 +8,14 @@ add_library(tun2socks SHARED
     tun2socks_bridge.cpp
 )
 
+# Built-in generic core stub (provides tt_* symbols so user无需另行放置 so)
+add_library(tun2socks_core SHARED
+    core_stub.cpp
+)
+
 target_include_directories(tun2socks PRIVATE ${CMAKE_SOURCE_DIR})
 
 find_library(log-lib log)
 
 target_link_libraries(tun2socks ${log-lib})
+target_link_libraries(tun2socks_core ${log-lib})
