--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,9 @@ android {
         externalNativeBuild {
             cmake { cppFlags "-O2" }
         }
-        ndk { abiFilters 'arm64-v8a','armeabi-v7a' }
+    // Include x86 / x86_64 so the app works inside common PC Android emulators (LDPlayer, etc.)
+    // and VMOS variants that may expose x86 ABI. Provide all four mainstream ABIs.
+    ndk { abiFilters 'arm64-v8a','armeabi-v7a','x86','x86_64' }
     }
 
     buildTypes {
